syntax = "proto3";

option java_package = "me.piotr.wera.basic";
option java_multiple_files = true;
option go_package = "basicpb";
package pb;

message BasicRequest {
    string value = 1;
    int32 id = 2;
}

message BasicResponse {
    string status = 1;
    int32 id = 2;
}

service BasicService {
    // Unary call
    rpc MyServiceUnary (BasicRequest) returns (BasicResponse) {};

    // Server Streaming
    rpc MyServiceServerStreaming (BasicRequest) returns (stream BasicResponse) {};

    // Client Streaming
    rpc MyServiceClientStreaming (stream BasicRequest) returns (BasicResponse) {};

    // BiDi Streaming
    rpc MyServiceBiDiStreaming (stream BasicRequest) returns (stream BasicResponse) {};
}