syntax = "proto3";

package todo;

message Greeting {
    string first = 1;
    string second = 2;
}
message GreetRequest {
    Greeting greet = 1;
}
message GreetResponse {
    string result = 1;
}
service GreetService {
    // Unary, will throw Exception if GreetRequest.first is an empty string
    rpc Unary(GreetRequest) returns (GreetResponse){};
    // Server Streaming
    rpc ServerStreaming(GreetRequest) returns (stream GreetResponse){};
    // Client Streaming
    rpc ClientStreaming(stream GreetRequest) returns (GreetResponse){};
    // Bidi Streaming
    rpc StreamEveryone(stream GreetRequest) returns (stream GreetResponse){};
}